--- a/public/index.html
+++ b/public/index.html
@@ -176,14 +176,17 @@
         <!-- BUTTON FOR THE DOWNLOAD OF THE APP -->
         <section>
             <div class="flex flex-col items-center justify-center mb-[40px]">
-                <button class="w-[200px] h-[40px] bg-white rounded-[20px] flex items-center justify-between pr-[5px] pl-[15px] hover:text-[#d91424] drop-shadow-lg group hover:scale-125 transform transition-transform" id="vai">
-                    <div class="text-[1.125rem] text-black group-hover:text-[#d91424] medio">BAIXAR</div>
-                    <div class="w-[32px] h-[32px] bg-black rounded-full group-hover:bg-[#d91424] flex items-center justify-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" viewBox="0 0 24 24">
-                            <path fill="white" d="M11 4h2v12l5.5-5.5l1.42 1.42L12 19.84l-7.92-7.92L5.5 10.5L11 16z"/>
-                        </svg>
-                    </div>
-                </button>
+                <a href="https://github.com/oboiboi/WeaveSite/releases/download/android/appweave.apk" download>
+                    <button class="w-[200px] h-[40px] bg-white rounded-[20px] flex items-center justify-between pr-[5px] pl-[15px] hover:text-[#d91424] drop-shadow-lg group hover:scale-125 transform transition-transform" id="vai">
+                        <div class="text-[1.125rem] text-black group-hover:text-[#d91424] medio">BAIXAR</div>
+                        <div class="w-[32px] h-[32px] bg-black rounded-full group-hover:bg-[#d91424] flex items-center justify-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" viewBox="0 0 24 24">
+                                <path fill="white" d="M11 4h2v12l5.5-5.5l1.42 1.42L12 19.84l-7.92-7.92L5.5 10.5L11 16z"/>
+                            </svg>
+                        </div>
+                    </button>
+                </a>
+                
                 <div class="mt-2 text-[0.8rem] text-white medio">disponível apenas para android</div>
             </div>
         </section>
